--- a/manage-landing-page/package.json
+++ b/manage-landing-page/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookmark-landing-page",
+  "name": "manage-landing-page",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
