--- a/entertainment-web-app/backend/package.json
+++ b/entertainment-web-app/backend/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "knex": "^2.2.0",
-    "nodemon": "^2.0.19",
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/pg": "^8.6.5"
+    "@types/pg": "^8.6.5",
+    "nodemon": "^2.0.19"
   }
 }
